--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,16 +1,15 @@
 .App {
   text-align: center;
+  height: 100%;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  padding: 10px;
 }
 
 .App-header {
@@ -24,15 +23,17 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.manager-nav-bar{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.manager-nav-bar-button{
+  background-color: #61dafb;
+  color: black;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 10px;
+  cursor: pointer;
 }
