added staff table and created a table component that can be adapted for use accross all the manager pages

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,3 +37,9 @@
   margin: 10px;
   cursor: pointer;
 }
+
+.staff-table-wrapper{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
