restock table mvp

--- a/frontend/src/components/table.css
+++ b/frontend/src/components/table.css
@@ -43,7 +43,11 @@ tr:not(:last-child) {
 td {
     flex: 1;
     padding: 3px 8px;
+    width: 80%; /* Adjust width to fit 80% of its parent */
     background-color: white;
+    width: 100px; /* Fixed width */
+    height: 40px; /* Fixed height */
+    border-left: 1px solid rgb(203, 203, 203); /* Add left border to separate columns */
 }
 
 tr:nth-child(even) td {
@@ -52,10 +56,10 @@ tr:nth-child(even) td {
 
 td:first-child {
     text-align: left;
+    border-left: none; /* Remove left border from the first cell */
 }
 
 td:last-child {
     text-align: right;
     border-left: 1px solid rgb(203, 203, 203);
 }
-
