--- a/frontend/src/components/menuDisplaystyle.css
+++ b/frontend/src/components/menuDisplaystyle.css
@@ -4,7 +4,7 @@ body {
     background-color: #f7f7f7;
     color: #333;
     margin: 0;
-    padding: 20px;
+    /* padding: 20px; */
 }
 
 /* Container for the menu sections */
