--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,14 @@
+
 .App {
   text-align: center;
   min-height: 100vh;
-  min-width: 100vw;
+  max-width: 98w;
   background-color: #e4d2ba;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+  overflow-x: hidden;
 }
 
 .nav{
@@ -59,27 +62,60 @@
   font-weight: bold;
 }
 
+.page-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 98vw;
+}
+
 .manager-nav-bar{
   display: flex;
   align-items: center;
   justify-content: space-evenly;
 }
 
+.managerPage{
+  position : absolute;
+  top: 0;
+  left: 5;
+  min-width: 100vw;
+  max-width: 100vw;
+  overflow-x: hidden;
+  background-color: #e4d2ba;
+}
+
 .manager-nav-bar-button{
-  background-color: #61dafb;
+  background-color: #d1282e;
   color: black;
   padding: 10px;
   border-radius: 5px;
-  margin: 4px;
+  margin: 12px;
   margin-top: 12px;
   cursor: pointer;
   text-decoration: none;
+  font-weight: bold;
 }
 
 .staff-table-wrapper{
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 80vw;
+  margin: 4px;
+  overflow-x: hidden;
+}
+
+.page-wrapper{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  overflow-x: hidden;
+  max-width: 98vw;
+}
+
+.page-header{
   width: 100%;
 }
 
