--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -38,6 +38,20 @@
 
   
 }
+select{
+  padding: 10px;
+  border-radius: 8px;
+  border: 2px solid #e0e0e0;
+  margin: 10px;
+}
+
+.employee-form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
 
 .back-button{
   position: absolute;
