--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -169,7 +169,7 @@ select{
 }
 
 .manager-nav-bar-button{
-  background-color: #d1282e;
+  background-color: #ff6865;
   color: black;
   padding: 10px;
   border-radius: 5px;
@@ -273,7 +273,7 @@ button {
   border-radius: 12px;
   padding: 8px 15px;
   background-color: #4CAF50;
-  color: white;
+  color: black;
   border: none;
   cursor: pointer;
 }
